--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>web-module</module>
   </modules>
 
-  <name>myNewProject</name>
+  <name>TestGenerator</name>
   <url>http://maven.apache.org</url>
 
   <properties>
